<resources>
    <string name="app_name">Travel Calculator</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="sun_calc">Sun calculator</string>
    <string name="locations">Locations</string>
    <string name="generate_table">Generate table</string>
    <string name="pick_from_map">Pick from map</string>
    <string name="view_forecast">View forecast</string>
    <string name="need_permission">Can\'t %s without this permission</string>
    <string name="saved">Saved path : %s</string>
    <string name="title_activity_maps">Map</string>
</resources>
